--- a/mua-uno/contraseña/index.html
+++ b/mua-uno/contraseña/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+     <div class="heart-cursor" id="heartCursor">💖</div>
+
     <div class="phone-container">
         <h1 class="title">¡Te Amo, Mi Amor!</h1>
         
@@ -39,7 +41,7 @@
             <button class="key" onclick="addNumber('7')">7</button>
             <button class="key" onclick="addNumber('8')">8</button>
             <button class="key" onclick="addNumber('9')">9</button>
-            <button class="key" onclick="clearPassword()" style="background: linear-gradient(135deg, #636e72, #2d3436, #636e72);">✕</button>
+            <button class="key" onclick="clearPassword()">✕</button>
             <button class="key" onclick="addNumber('0')">0</button>
             <button class="key" onclick="addSlash()">/</button>
         </div>
@@ -50,6 +52,7 @@
             ❌ Fecha incorrecta. Recuerda el día que te di la flor 🌹
         </div>
     </div>
+
 
     <script src="./script.js"></script>
 </body> 
