--- a/mua-uno/perdon/perdoname.html
+++ b/mua-uno/perdon/perdoname.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
+    <div class="custom-cursor" id="customCursor">😊</div>
     <div class="sparkles" id="sparkles"></div>
     <div class="floating-particles" id="particles"></div>
     
