--- a/mua-uno/jiji/lo-sabia.html
+++ b/mua-uno/jiji/lo-sabia.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="heart-cursor" id="heartCursor">💖</div>
   <div class="confetti" id="confetti"></div>
   <div class="floating-emojis" id="floatingEmojis"></div>
 
@@ -14,25 +15,24 @@
     <h1>😏 ¡Lo sabía!</h1>
 
     <div class="final-message">
-      <h2 class="surprise-title">🎉 <span class="sparkles">Sabía que me ibas a perdonar</span> 🎉</h2>
+        <h2 class="surprise-title">🎉 <span class="sparkles">Sabía que me ibas a perdonar</span> 🎉</h2>
 
-      <p class="intro-celebration">¡Porque me conoces y sabes que todo lo hago con amor!</p>
+        <p class="intro-celebration">¡Porque me conoces y sabes que todo lo hago con amor!</p>
 
-      <div class="love-points-container">
-        <div class="love-point">🌟 Eres increíble y por eso te amo tanto</div>
-        <div class="love-point">💕 Gracias por ser tan comprensivo conmigo</div>
-        <div class="love-point">🥰 Eres el mejor novio del mundo entero</div>
-        <div class="love-point">✨ Siempre sabes cómo hacerme sonreír</div>
-      </div>
+        <div class="love-points-container">
+            <div class="love-point">🌟 Eres increíble y por eso te amo tanto</div>
+            <div class="love-point">💕 Gracias por ser tan comprensivo conmigo</div>
+            <div class="love-point">🥰 Eres el mejor novio del mundo entero</div>
+            <div class="love-point">✨ Siempre sabes cómo hacerme sonreír</div>
+        </div>
 
-      <div class="final-hearts">💖✨💖✨💖</div>
+        <div class="final-hearts">💖✨💖✨💖</div>
 
-      <div class="final-declaration">¡Te amo infinito y más allá! 🚀💫</div>
+        <div class="final-declaration">¡Te amo infinito y más allá! 🚀💫</div>
     </div>
 
     <button class="restart-btn" onclick="restart()">💕 Volver al inicio</button>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
