--- a/index.html
+++ b/index.html
@@ -2,12 +2,35 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Bienvenida</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Para Ti, Amor 💖</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Hola ❤️</h1>
-  <ul>
-    <li><a href="./mua-uno/contraseña/index.html">Contraseña</a></li>
-  </ul>
+<div class="heart-cursor" id="heartCursor">💖</div>
+
+  <div class="phone-container">
+    <h1 class="title">Este espacio es solo para ti ❤️</h1>
+
+    <div class="couple-image">
+      <div class="floating-hearts">
+        <span class="heart">💕</span>
+        <span class="heart">💖</span>
+        <span class="heart">💕</span>
+        <span class="heart">💖</span>
+      </div>
+      <span class="couple-emoji">👩‍❤️‍👨</span>
+      <div class="branches">
+        <span class="branch-left">🌿</span>
+        <span class="branch-right">🌿</span>
+      </div>
+    </div>
+
+    <p class="subtitle">Aquí comienza un recorrido lleno de amor y recuerdos 🌸</p>
+    <p class="hint">Presiona el botón para descubrir lo que sigue... 💌</p>
+
+    <a href="./mua-uno/contraseña/index.html" class="enter-btn" style="text-decoration: none;">Abrir el Corazón</a>
+  </div>
+  <script src="./script.js"></script>
 </body>
 </html>
