--- a/mua-uno/jiji/lo-sabia.html
+++ b/mua-uno/jiji/lo-sabia.html
@@ -17,18 +17,18 @@
     <div class="final-message">
         <h2 class="surprise-title">🎉 <span class="sparkles">Sabía que me ibas a perdonar</span> 🎉</h2>
 
-        <p class="intro-celebration">¡Porque me conoces y sabes que todo lo hago con amor!</p>
+        <p class="intro-celebration">Porque me amas mucho y soy el amor de tu vida</p>
 
         <div class="love-points-container">
-            <div class="love-point">🌟 Eres increíble y por eso te amo tanto</div>
+            <div class="love-point">🌟 Eres increible y por eso te amo tanto</div>
             <div class="love-point">💕 Gracias por ser tan comprensivo conmigo</div>
             <div class="love-point">🥰 Eres el mejor novio del mundo entero</div>
-            <div class="love-point">✨ Siempre sabes cómo hacerme sonreír</div>
+            <div class="love-point">✨ Siempre sabes como hacerme sonreir</div>
         </div>
 
         <div class="final-hearts">💖✨💖✨💖</div>
 
-        <div class="final-declaration">¡Te amo infinito y más allá! 🚀💫</div>
+        <div class="final-declaration">¡Te amo infinito y mas alla! 🚀💫</div>
     </div>
 
     <button class="restart-btn" onclick="restart()">💕 Volver al inicio</button>
